# AI4X-Platform-dify

./: .env.example  .gitignore  README.md  pyproject.toml  test.py
.trash/: 00_通用架构约束与工具规范.md
DifyAgentWorkflow/: ai4sec_opencti_webhook_workflow.yaml  ai4sec_threat_modeling_workflow.yaml  ai4sec_unified_workflow.yaml
DifyAgentWorkflow/tools/: ai4sec_runtime_tools.py
config/: opencti_webhook_signal_template.ejs  stix_minimal_field_matrix.json
debug/: _append_resolver_notes.py  _kg_task_extract.json  _tmp.txt  ggg.yml  iteration-commit-message.md  plugin.py
design/KG/: SystemArchitecture.json
design/applicationlayer/: AI4sec应用层架构设计.md
design/businesslayer/: AI4SEC业务层架构设计.md
design/originaldata/: 2026-03-18t14_39_30.193z_tlp_all_(exportfilestix2)_report-vpd design_full.json
design/tasks/: taskandissues_for_LLM.md
design/technologylayerAndPysicallayer/: AI4SEC系统技术和物理层架构.md
design/temp/: audit.md
design/userstories/: BUSINESS_PROCESS_DESIGN_GUIDE.md  README.md
externalDify/: .env
external_opencti/: .env  opencti_webhook_agent_switch_guide.md  opencti_webhook_signal_template.ejs
implementation/: task-list.md
implementation/taskhelpinfos/: 2026-3-13_ApplicationLayer.md  2026-3-13_基于战略动机、业务架构、应用架构进行技术和物理层的目标架构设计_输出设计文档.md  2026-3-13_请基于战略动机层的用户价值流_给出业务层的架构设计.md  2026-3-14_ApplicationLayer.md  2026-3-14_请添加业务层的测试用例集.md  2026-3-16_业务流程中所有数据都必须是OPENCTI平台中的STIX2_1标准数据.md  2026-3-16_全局情报底座_OPENCTI_平台.md  2026-3-16_支持快速的情报生产和消费.md  2026-3-17_在查询和匹配OPENCTI中的report时_我希望你不要把所有report都查询回来_而是用手中的report_id作为参数去查.md  2026-3-17_威胁建模闭环流程.md  (+7 more)
mcp/: __init__.py
(+70 files in other folders)
